update profile form

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
 			"@lib/core": [
 				"./projects/core/src/public-api"
 			],
+			"@lib/shared": [
+				"./projects/shared/src/public-api"
+			],
 		},
 		"outDir": "./dist/out-tsc",
 		"strict": true,
